<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_Alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="240dp"
        android:onClick="AlertDialogue"
        android:text="@string/alert_dialogue"
        app:backgroundTint="#EA80FC"
        app:layout_constraintBottom_toTopOf="@id/btn_SnakeBar"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_SnakeBar"
        android:layout_width="119dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:onClick="SnakeBar"
        android:text="@string/snake_bar"
        app:backgroundTint="#81FF92"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_Alert" />

    <Button
        android:id="@+id/btn_custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/custom_dialogue"
        android:onClick="CustomDialog"
        app:backgroundTint="#8C9EFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_SnakeBar" />

    <Button
        android:id="@+id/btn_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="ProgressBar"
        android:text="@string/progressbar"
        app:backgroundTint="#82B1FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_custom" />

</androidx.constraintlayout.widget.ConstraintLayout>