<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="2dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Custom dialog is the dialog which is just for practise  "
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/btn_Submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/red"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/btn_Cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/blue"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>